--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo": "^21.0.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
+    "react-native-elements": "^0.17.0",
     "react-navigation": "^1.0.0-beta.13",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
