--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
   "dependencies": {
     "axios": "^0.16.2",
     "expo": "^21.0.0",
+    "install": "^0.10.1",
+    "npm": "^5.5.1",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
     "react-native-elements": "^0.17.0",
     "react-navigation": "^1.0.0-beta.13",
+    "react-navigation-addons": "github:satya164/react-navigation-addons",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "redux": "^3.7.2",
