--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
     "react-native-elements": "^0.17.0",
+    "react-native-progress-circle": "^2.0.0",
     "react-navigation": "^1.0.0-beta.13",
     "react-navigation-addons": "github:satya164/react-navigation-addons",
     "react-redux": "^5.0.6",
